  Added option to show attributes.
  - plotDistribution_gui
  NA's now removed prior to plotting and subtracted from number of observations.
  - cropData_gui
  Option to remove NA (earlier NA was automatically removed).
  Fixed 'Info' not updated when selecting a column.
* New functions:
  - colConvert
  - calculateSpike / calculateSpike_gui
  - calculateAllele
* Added attributes for the following functions:
  import
  import_gui
  calculateAT
  calculateAT_gui
  calculateBalance
  calculateBalance_gui
  calculateDropout
  calculateDropout_gui
  calculateStutter
  calculateStutter_gui

Version 1.5.2.9001
------------------------------------------------------------------------------
* Bug fixes and improvements with the most significant listed below:
  - readPanelsFile
  Convert all color names to lower case. Fixes kit plot D16 bug in Fusion 6C.
  - calculateDropout / calculateDropout_gui
  Reverted fix in 1.5.2.9000 and instead removed all NA rows from reference prior to analysis.
* Updated kit file. Added 'Fusion 6C', removed 'ESI17'.
  Kit sorted roughly according to vendor and release.
  

Version 1.5.2.9000
------------------------------------------------------------------------------
* Bug fixes and improvements with the most significant listed below:
  - calculateDropout / calculateDropout_gui
  Handles the case when a reference allele is NA (skip to next marker).

Version 1.5.2
------------------------------------------------------------------------------
* Bug fixes and improvements with the most significant listed below:
  - calculateAT6 / calculateAT6_gui
  Now use 'standard error of the regression' (or 'sigma') instead of 'standard error of the intercept'.
  - slim / slim_gui
  Fixed error when 'stack' and 'slim' is empty or "" (replaced by 'NULL').
  Now handle no columns to slim/stack (return unchanged data.frame).
  - Plot AT confidence interval now matches the one-sided used in calculateAT6.
* Corrections in documentation or GUI: