@@ -50,6 +50,7 @@ export(columns)
 export(columns_gui)
 export(combine_gui)
 export(cropData_gui)
+export(detectKit)
 export(editData_gui)
 export(filterProfile)
 export(filterProfile_gui)
