@@ -137,7 +137,7 @@ calculateDropout_gui <- function(env=parent.frame(), savegui=NULL,
       svalue(f2_save_edt) <- paste(val_obj, "_dropout", sep="")
       
       # Detect kit.
-      kitIndex <- detectKit(.gData)
+      kitIndex <- detectKit(.gData, index=TRUE)
       # Select in dropdown.
       svalue(f2_kit_drp, index=TRUE) <- kitIndex
       
