@@ -131,7 +131,7 @@ calculateResultType_gui <- function(env=parent.frame(), savegui=NULL,
       svalue(f2_save_edt) <- paste(val_obj, "_type", sep="")
 
       # Detect kit.
-      kitIndex <- detectKit(.gData)
+      kitIndex <- detectKit(.gData, index=TRUE)
       # Select in dropdown.
       svalue(f0_kit_drp, index=TRUE) <- kitIndex
         
